; ModuleID = '/home/carl/AnghaBench/Cello/src/extr_Table.c_Table_Probe.c'
source_filename = "/home/carl/AnghaBench/Cello/src/extr_Table.c_Table_Probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Table = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.Table*, i32, i32)* @Table_Probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Table_Probe(%struct.Table* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.Table*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store %struct.Table* %0, %struct.Table** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %5, align 4
  %9 = load i32, i32* %6, align 4
  %10 = sub nsw i32 %9, 1
  %11 = sub nsw i32 %8, %10
  %12 = sext i32 %11 to i64
  store i64 %12, i64* %7, align 8
  %13 = load i64, i64* %7, align 8
  %14 = icmp slt i64 %13, 0
  br i1 %14, label %15, label %21

15:                                               ; preds = %3
  %16 = load %struct.Table*, %struct.Table** %4, align 8
  %17 = getelementptr inbounds %struct.Table, %struct.Table* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* %7, align 8
  %20 = add nsw i64 %18, %19
  store i64 %20, i64* %7, align 8
  br label %21

21:                                               ; preds = %15, %3
  %22 = load i64, i64* %7, align 8
  %23 = trunc i64 %22 to i32
  ret i32 %23
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
